--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <table>
                     <tr>
                       <th>English Language</th>
-                      <th>Material Cause</th>
                       <th>Macroeconomics</th>
+                      <th>Law & Polity</th>
+
                     </tr> 
 
                 
