--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               <div id="tb">
                 <table>
                     <tr>
-                      <th>English Language</th>
-                      <th>Macroeconomics</th>
-                      <th>Law & Polity</th>
+                      <th>Topics</th>
+                      <th>Topics</th>
+                      <th>Topics</th>
 
                     </tr> 
 
