--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="x-icon" href="favicon.ico.jpg">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Basic Learning</title>
 </head>
 <body>
    <div id="opac">
