--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div id="bod2"> 
               <div id="t3" >
-                <h3> Proverbs & Sayings:</h3>
+                <h3> Bell Labs :</h3>
                 <p class="sp1" >1.Growth: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                 <div class="exmp">
                   <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
