--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
               <div id="tb">
                 <table>
                     <tr>
-                      <th>English</th>
-                      <th>Macroeconomics</th>
-                      <th>Technology</th>
+                      <th>Topics</th>
+                      <th>Topics</th>
+                      <th>Topics</th>
 
                     </tr> 
 
