--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <br>
                
                <div id="t1" >
-                    <h3> English:</h3>
+                    <h3>1.English:</h3>
                     <p class="sp1" >1.Syntax: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                     <div class="exmp">
                       <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
@@ -63,7 +63,7 @@
               </div>
               <br>
               <div id="t2">
-                <h3>Macroeconomics: </h3>
+                <h3>2.Macroeconomics: </h3>
                 <p class="sp1" >1.Maxim of quality :Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 <div class="exmp">
                   <p class="sp2" >Exculpatory evidence: evidence that is favorable to the defendant. Under Brady rule prosecution is legally obligated to disclose all the exculpatory evidence to the defandant. That is a great legal principle.</p>
@@ -92,7 +92,7 @@
 
             <div id="bod2"> 
               <div id="t3" >
-                <h3> Bell Labs :</h3>
+                <h3>3.Bell Labs :</h3>
                 <p class="sp1" >1.Growth: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                 <div class="exmp">
                   <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
