--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
                
                <div id="t1" >
-                    <h3>1.English:</h3>
+                    <h3>1.English</h3>
                     <p class="sp1" >1.Syntax: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                     <div class="exmp">
                       <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
@@ -63,7 +63,7 @@
               </div>
               <br>
               <div id="t2">
-                <h3>2.Macroeconomics: </h3>
+                <h3>2.Macroeconomics </h3>
                 <p class="sp1" >1.Maxim of quality :Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 <div class="exmp">
                   <p class="sp2" >Exculpatory evidence: evidence that is favorable to the defendant. Under Brady rule prosecution is legally obligated to disclose all the exculpatory evidence to the defandant. That is a great legal principle.</p>
@@ -71,7 +71,7 @@
               </div>
               <br>
               <div id="t3">
-                <h3>3.Bell Labs: </h3>
+                <h3>3.Bell Labs </h3>
                 <p class="sp1" >1.Maxim of quality :Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 <div class="exmp">
                   <p class="sp2" >Exculpatory evidence: evidence that is favorable to the defendant. Under Brady rule prosecution is legally obligated to disclose all the exculpatory evidence to the defandant. That is a great legal principle.</p>
@@ -81,7 +81,7 @@
 
             <div id="bod2"> 
               <div id="t4" >
-                <h3>4.Bloom's taxonomy :</h3>
+                <h3>4.Bloom's taxonomy </h3>
                 <p class="sp1" >1.Growth: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                 <div class="exmp">
                   <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
@@ -89,7 +89,7 @@
               </div>
               <br>
               <div id="t5" >
-                <h3>5.Maslow's hierarchy of needs :</h3>
+                <h3>5.Maslow's hierarchy of needs </h3>
                 <p class="sp1" >1.Growth: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                 <div class="exmp">
                   <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
@@ -97,7 +97,7 @@
               </div>
               <br>
               <div id="t6" >
-                <h3>6.Grice's maxims :</h3>
+                <h3>6.Grice's maxims </h3>
                 <p class="sp1" >1.Growth: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non .</p>
                 <div class="exmp">
                   <p class="sp2" > Exculpatory evidence: evidence that is favorable to the accused. </p>
