--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                      <tr>
                       <td><a href="#t1">English</a></td>
                       <td><a href="#t2"> Macroeconomics</a></td>   
-                      <td><a href="#t3">Bell Labs inventions</a></td>
+                      <td><a href="#t3">Bell Labs Inventions</a></td>
                                          
                     </tr>                  
                   </table>
