--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div id="bod2"> 
               <div id="t3">
-                <h3>3.Bell Labs </h3>
+                <h3>3.Bell Labs Inventions </h3>
                 <p class="sp1" >1.Maxim of quality :Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                 <div class="exmp">
                   <p class="sp2" >Exculpatory evidence: evidence that is favorable to the defendant. Under Brady rule prosecution is legally obligated to disclose all the exculpatory evidence to the defandant. That is a great legal principle.</p>
