--- a/index.html
+++ b/index.html
@@ -22,30 +22,44 @@
         <div id="main">
           <div id="t1" >
                     <h2>Important topics to learn</h2>
-                    <h3>Topic 1:</h3> 
+                    <h3>Premise:</h3> 
                     <div>
                       <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
                        <p class="sp2" > loLorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum aliquid quis. Incidunt molestias illo tenetur, corporis ducimus quam corrupti sunt aliquam maiores earum voluptates, aspernatur adipisci cum! Eius nobis debitis eaque atque ullam delectus temporibus laborum, autem fuga, dolor enim labore ipsum, deleniti saepe nesciunt similique est!</p> <br>
+                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum est!</p> 
 
-                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum aliquid quis. Incidunt molestias illo tenetur, corporis ducimus quam corrupti sunt aliquam maiores earum voluptates, aspernatur adipisci cum! Eius nobis debitis eaque atque ullam delectus temporibus laborum, autem fuga, dolor enim labore ipsum, deleniti saepe nesciunt similique est!</p>
+                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore  similique est!</p>
+                     </div>
+
+                    </div> <br>
+
+                    <h3>Precondition:</h3> 
+                    <div>
+                      <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
+                     <div class="exmp">
+                       <p class="sp2" > loLorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum est!</p> 
+
+                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore  similique est!</p>
                      </div>
 
                     </div>
+
+
                       
           </div> <br>
           
           <div id="t2">
-              <h3>Topic 2:</h3> 
-               <div>
+              <h3>Paraphrasing:</h3> 
+              <div>
                       <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
                        <p class="sp2" > loLorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                      </div>
 
-                    </div>      
-            </div>    
+              </div>      
+          </div>    
         </div>
 
       <div id="footer">&copy; copyright 2025 &mdash;  <span id="curYr"></span> Vamsi.</div> 
