--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
         
         <div id="main">
+          <h2>Important topics to learn</h2>
+          <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
           <div id="t1" >
-                    <h2>Important topics to learn</h2>
                     <h3>Premise:</h3> 
                     <div>
                       <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
