--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div> <br>
           
           <div id="t2">
-              <h3>Paraphrasing:</h3> 
+              <h3>Paraphrase:</h3> 
               <div>
                       <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
