--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         </div>
         
         <div id="main">
-          <h2>Important topics to learn</h2>
-          <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
+          <h2>Important topics to learn</h2> <br>
+          <p class="sp1">In terms of explanation, the three important concepts are: Premise, Precondition, and Paraphrase.</p>
+          <p class="sp1">In terms of criminal investigation, the three important concepts are: Motive, Means and Opportunity.</p>
+          <p class="sp1">In terms of philosophy, the three important names to remember are: Socrates, Plato and Aristotle.</p> <br>
           <div id="t1" >
                     <h3>Premise:</h3> 
                     <div>
@@ -62,6 +64,8 @@
               </div>      
           </div>    
         </div>
+        
+        <br>
 
       <div id="footer">&copy; copyright 2025 &mdash;  <span id="curYr"></span> Vamsi.</div> 
     </div> 
