--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         
         <div id="main">
           <h2>Important topics to learn</h2> <br>
-          <p class="sp1">In terms of explanation, the three important concepts are: Premise, Precondition, and Paraphrase.</p>
-          <p class="sp1">In terms of criminal investigation, the three important concepts are: Motive, Means and Opportunity.</p>
-          <p class="sp1">In terms of philosophy, the three important names to remember are: Socrates, Plato and Aristotle.</p> <br>
+          <p class="sp1" id="p1">1. In terms of explanation, the three important concepts are: Premise, Precondition, and Paraphrase.</p>
+          <p class="sp1" id="p2">2. In terms of criminal investigation, the three important concepts are: Motive, Means and Opportunity.</p>
+          <p class="sp1" id="p3">3. In terms of philosophy, the three important names to remember are: Socrates, Plato and Aristotle.</p> <br>
           <div id="t1" >
                     <h3>Premise:</h3> 
                     <div>
-                      <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
+                      <p class="sp1" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
                        <p class="sp2" > loLorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                        <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum est!</p> 
