--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id="header"> 
            <h1>Introduction</h1>
             <p >The ability to teach yourself is probably the greatest superpower you can have in this information age. Improving your language skills plays a crucial role in developing that ability. This is an eductional website where the primary focus is on teaching english using important general knowledge topics. </p> <br>
+            <div id="sld"><p id="sl">If a sentence could explain the basic idea behind this website, it would be "Ignorance is bliss, and also dangerous".</p> </div> <br>
+            
             <p>ఈ వెబ్సైట్ ఇంగ్లిష్ బాష నేర్చుకుంటున్న, నేర్చుకోవాలి అని అనుకుంటున్న విద్యార్ధుల కోసం రూపొందించబడింది.</p> <br>
             <p>యూట్యూబ్ లో అమెరికాకు చెందిన " Jacob Clifford " అనే వ్యక్తి  పెట్టిన " Macroeconomics 15 minute Review " అనే వీడియొని ప్రతి విద్యార్ధి  తప్పక చూడాలి . మీరు స్కూల్ విద్యార్ధులు అయితే అందులోని అంశాలను వదిలేసి, ఇంగ్లిష్  కోసం ఆ వీడియొని subtitles లేకుండా చూడండి.  అందులో అతను పలికే పదాలు, మాట్లాడే విదానం, ఉపయోగించే వాక్యాలని అర్ధంచేసుకోటానికి ప్రయత్నించండి, అందుకు నెలలు సంవత్సరాలు పట్టినా పర్లేదు. ఈ ఒక్క వీడియొ మీ భవిష్యత్తుకు చాలా ఉపయోగపడుతుంది .</p>    
         </div>
@@ -25,7 +27,7 @@
           <p class="sp1" id="p2">2. In terms of criminal investigation, the three important concepts are: Motive, Means and Opportunity.</p>
           <p class="sp1" id="p3">3. In terms of philosophy, the three important names to remember are: Socrates, Plato and Aristotle.</p> <br>
           <div id="t1" >
-                    <h3>Premise:</h3> 
+                    <h3>Maslow's hierarchy of needs:</h3> 
                     <div>
                       <p class="sp1" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
