--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
           <p class="sp1" id="p2">2. In terms of criminal investigation, the three important concepts are: Motive, Means and Opportunity.</p>
           <p class="sp1" id="p3">3. In terms of philosophy, the three important names to remember are: Socrates, Plato and Aristotle.</p> <br>
 
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, similique.</p> <br>
+          <h2>Choosing Topics</h2>
 
-          <div class="sld"><p class="sl">Commercializing scientific advancements is the axiom of human civilization.</p></div>
+          <p>Given the technological advancements in the present day and the attention span of an average adult, it is getting hard to decide which topics to focus on and which topics to ignore. Job markets seem to be the most volatile ones in the current age, especially with the advent of AI. I cannot think of any other teaching strategy than following the basic principle given below.</p> <br>
+
+          <div class="sld"><p class="sl">Commercializing scientific advancements is the axiom of human civilization.</p></div> <br>
 
           
           <div id="t1" >
