--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                        <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum est!</p> 
                      </div>
 
-                    </div> <br>
+                    </div>
                       
           </div> <br>
           
