--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           
           <div id="t1" >
-                    <h3>Maslow's hierarchy of needs:</h3> 
+                    <h3>Topic 1:</h3> 
                     <div>
                       <p class="sp1" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
@@ -49,7 +49,7 @@
           </div> <br>
           
           <div id="t2">
-              <h3>Paraphrase:</h3> 
+              <h3>Topic 2:</h3> 
               <div>
                       <p class="sp1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
                      <div class="exmp">
