--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
           
           <div id="t1" >
-                    <h3>Topic 1:</h3> 
+                    <h3>Macroeconomics:</h3> 
                     <div>
-                      <p class="sp1" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias dolorum odit non.</p>
+                      <p class="sp1" id="ma1">Let us try to learn Macroeconomics in plain english using the following sentences</p>
                      <div class="exmp">
-                       <p class="sp2" > loLorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                       <p class="sp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt beatae inventore illum est!</p> 
+                       <p class="sp2" id="ma2">1. Macroeconomics deals with the entire economy of a country and microeconomics deals with individual sectors/households in a country. The prefix "macro" means big and "micro" means small. </p>
+                       <p class="sp2" id="ma3" >2. In Macroeconomics, the primary focus is on Economic Growth(producing more goods than the previous year and offering more services than the previous year) , Inflation and Unemployment. The goal here is to Maximize economic growth, Minimize unemployment and prevent inflation from increasing beyond expected rate, which is usually between 2% and 6%.<p> 
+                       <p class="sp2" id="ma4">3.There are two economic policies that are used to achieve our economic goals. They are Fiscal policy and Monetary policy. Fiscal policy primarily deals with taxation. Monetary policy deals with regulating money supply in the economy.Central government deals with Fiscal Policy. Central bank deals with Monetary policy. In india it is called Reserve Bank Of India (RBI), in america it is called the Federal Reserve. Central government levies taxes, while the central bank is the head of all banks in a country and regulates money supply using various interest rates.</p>
+                       <p class="sp2" id="ma5">4. If you type " Milton Friedman - I, pencil " on youtube, you will get a video in which he explained briliantly how foreign trade works. It is a must watch video. <p>
+
                      </div>
 
                     </div>
