--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div id="t1" >
                     <h3>Macroeconomics:</h3> 
                     <div>
-                      <p class="sp1" id="ma1">Let us try to learn Macroeconomics in plain english using the following sentences</p>
+                      <p class="sp1" id="ma1">Let us try to learn Macroeconomics in plain English using the following sentences</p>
                      <div class="exmp">
                        <p class="sp2" id="ma2">1. Macroeconomics deals with the entire economy of a country and microeconomics deals with individual sectors/households in a country. The prefix "macro" means big and "micro" means small. </p>
                        <p class="sp2" id="ma3" >2. In Macroeconomics, the primary focus is on Economic Growth(producing more goods than the previous year and offering more services than the previous year) , Inflation and Unemployment. The goal here is to Maximize economic growth, Minimize unemployment and prevent inflation from increasing beyond expected rate, which is usually between 2% and 6%.<p> 
@@ -54,7 +54,7 @@
           <div id="t2" >
                     <h3>Antimicrobial resistance (AMR):</h3> 
                     <div>
-                      <p class="sp1" id="ma1">Let us try to learn Macroeconomics in plain english using the following sentences</p>
+                      <p class="sp1" id="ma1">Let us try to learn about  Antimicrobial resistance in plain English using the following sentences</p>
                      <div class="exmp">
                        <p class="sp2" id="ma2">1. Macroeconomics deals with the entire economy of a country and microeconomics deals with individual sectors/households in a country. The prefix "macro" means big and "micro" means small. </p>
 
