--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div> <br>
 
           <div id="t2" >
-                    <h3>Antimicrobial resistance (AMR):</h3> 
+                    <h3>Antimicrobial resistance:</h3> 
                     <div>
                       <p class="sp1" id="ma1">Let us try to learn about  Antimicrobial resistance in plain English using the following sentences</p>
                      <div class="exmp">
