--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                      <tr>
                       <td><a href="#t1">Macroeconomics</a></td>
-                      <td><a href="#t2">Antimicrobial resistance (AMR)</a></td>   
+                      <td><a href="#t2">Antimicrobial resistance</a></td>   
                      
                                          
                     </tr>                  
