--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      <tr>
                       <td><a href="#t1">Macroeconomics</a></td>
                       <td><a href="#t2">Antimicrobial resistance</a></td> 
-                       <td><a href="#t3">Proverbs and sayings</a></td>
+                       <td><a href="#t3">Quotes and sayings</a></td>
 
                      
                                          
