--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
           <div id="t3" >
                     <h3>Quotes and sayings:</h3> 
                     <div>
-                      <p class="sp1" id="ma1">The idea that history is the best predictor of the future may not be 100% accurate, but it holds a lot of weight. Learning famous proverbs and sayings may be a better way of learning both history and English grammar. While the majority of these quotes can't be traced to their exact sources, many can be correctly attributed; we will discuss both types. </p>
+                      <p class="sp1" id="ma6">The idea that history is the best predictor of the future may not be 100% accurate, but it holds a lot of weight. Learning famous proverbs and sayings may be a better way of learning both history and English grammar. While the majority of these quotes can't be traced to their exact sources, many can be correctly attributed; we will discuss both types. </p>
 
-                      <p class="sp1" id="ma2">The two important poems that everyone should read are "First they came..." by German pastor Martin Niemöller , and "A Worker Reads History" by Bertolt Brecht.
+                      <p class="sp1" id="ma7">The two important poems that everyone should read are "First they came..." by German pastor Martin Niemöller , and "A Worker Reads History" by Bertolt Brecht.
                       </p> 
 
-                      <p class="sp1" id="ma3">here are some important phrases to remember</p>
+                      <p class="sp1" id="ma8">Here are some important phrases to remember</p>
                       
                      <div class="exmp">
                       <p  class="qt">1. Learn to walk before you run.</p>
