--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
                       <p  class="qt">1. Learn to walk before you run.</p>
                       <p  class="qt">2. Hope for the best , prepare for the worst. </p>
                       <p  class="qt">3. The devil is in the details.</p>
-                      <p  class="qt">4. Don't put the cart before the horse</p>
+                      <p  class="qt">4. Don't put the cart before the horse.</p>
                       <p  class="qt">5. Actions speak louder than words.</p>
                       <p  class="qt">6. A tree is known by its fruit.</p>
                       <p  class="qt">7. Better late than never.</p>
                       <p  class="qt">8. Don't put all your eggs in one basket.</p>
                       <p  class="qt">9. Fools rush in where angels fear to tread.</p>
                       <p  class="qt">10. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
-                      <p class="qt">11. Loose lips sink ships</p>
+                      <p class="qt">11. Loose lips sink ships.</p>
                       <p class="qt">12. Rome wasn't built in a day.</p>
 
                      </div>
