--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p class="sl">Commercializing scientific advancements is the axiom of human civilization.</p>
           </div> <br>
 
-          <p class="sp1" > A.I వల్ల ఒక 30 సంవత్చరాల  తరవాత  పరిస్తితి ఎలా ఉంటుంది అని కచ్చితంగా చెప్పలేకపోయినా ఊహించటానికి ఏ ఏ విషయాలు పరిగణించాలి అంటే, Jensen Huang, Elon musk వాళ్ళ వాళ్ళ  కంపెనీలలో ఏం చేస్తున్నారో గమనిస్తుండాలి. Netherlands కి చెందిన ASML కంపెనీని కూడా గమనిస్తుండాలి. ప్రస్తుతం కంప్యూటర్లో వాడే మిక్రోచిప్లను తయ్యారు చెయ్యాలి అంటే ASML వాళ్ళు తయారు చేసే పెద్ద పెద్ద యంత్రాలే వాడాలి కాబట్టి ఆ కంపెనీ గురించి తెలిసుండాలి.</p>
+          <p class="sp1" > Artificial intelligence (AI) వల్ల ఒక 30 సంవత్చరాల  తరవాత  పరిస్తితి ఎలా ఉంటుంది అని కచ్చితంగా చెప్పలేకపోయినా ఊహించటానికి ఏ ఏ విషయాలు పరిగణించాలి అంటే, Jensen Huang, Elon musk వాళ్ళ వాళ్ళ  కంపెనీలలో ఏం చేస్తున్నారో గమనిస్తుండాలి. Netherlands కి చెందిన ASML కంపెనీని కూడా గమనిస్తుండాలి. ప్రస్తుతం కంప్యూటర్లో వాడే మైక్రోచిప్లను తయ్యారు చెయ్యాలి అంటే ASML వాళ్ళు తయారు చేసే పెద్ద పెద్ద యంత్రాలే వాడాలి కాబట్టి ఆ కంపెనీ గురించి తెలిసుండాలి.</p>
              
           
 
