--- a/index.html
+++ b/index.html
@@ -118,15 +118,16 @@
                       <p  class="qt">2. Hope for the best , prepare for the worst. </p>
                       <p  class="qt">3. The devil is in the details.</p>
                       <p  class="qt">4. Don't put the cart before the horse.</p>
-                      <p  class="qt">5. Actions speak louder than words.</p>
-                      <p  class="qt">6. A tree is known by its fruit.</p>
-                      <p  class="qt">7. Better late than never.</p>
-                      <p  class="qt">8. Don't put all your eggs in one basket.</p>
-                      <p  class="qt">9. Fools rush in where angels fear to tread.</p>
-                      <p  class="qt">10. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
-                      <p class="qt">11. Loose lips sink ships.</p>
-                      <p class="qt">12. Rome wasn't built in a day.</p>
-                      <p class="qt">13. The road to hell is paved with good intentions.</p>
+                      <p class="qt">5. The best time to plant a tree was 20 years ago. The second best time is now.</p>
+                      <p  class="qt">6. Actions speak louder than words.</p>
+                      <p  class="qt">7. A tree is known by its fruit.</p>
+                      <p  class="qt">8. Better late than never.</p>
+                      <p  class="qt">9. Don't put all your eggs in one basket.</p>
+                      <p  class="qt">10. Fools rush in where angels fear to tread.</p>
+                      <p  class="qt">11. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
+                      <p class="qt">12. Loose lips sink ships.</p>
+                      <p class="qt">13. Rome wasn't built in a day.</p>
+                      <p class="qt">14. The road to hell is paved with good intentions.</p>
 
                      </div>
 
