--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                       <p class="qt">13. Rome wasn't built in a day.</p>
                       <p class="qt">14. The road to hell is paved with good intentions.</p>
                       <p class="qt" >15. Birds of a feather flock together.</p>
+                      <p class="qt" >16. Better safe than sorry.</p>
 
                      </div>
 
