--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
                       <p class="qt">5. The best time to plant a tree was 20 years ago. The second best time is now.</p>
                       <p  class="qt">6. Actions speak louder than words.</p>
                       <p  class="qt">7. A tree is known by its fruit.</p>
-                      <p  class="qt">8. Better late than never.</p>
-                      <p  class="qt">9. Don't put all your eggs in one basket.</p>
-                      <p  class="qt">10. Fools rush in where angels fear to tread.</p>
-                      <p  class="qt">11. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
-                      <p class="qt">12. Loose lips sink ships.</p>
-                      <p class="qt">13. Rome wasn't built in a day.</p>
-                      <p class="qt">14. The road to hell is paved with good intentions.</p>
-                      <p class="qt" >15. Birds of a feather flock together.</p>
-                      <p class="qt" >16. Better safe than sorry.</p>
+                      <p class="qt">8. "A nation is born stoic and dies epicurean" - Will Durant</p>
+                      <p  class="qt">9. Better late than never.</p>
+                      <p  class="qt">10. Don't put all your eggs in one basket.</p>
+                      <p  class="qt">11. Fools rush in where angels fear to tread.</p>
+                      <p  class="qt">12. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
+                      <p class="qt">13. Loose lips sink ships.</p>
+                      <p class="qt">14. Rome wasn't built in a day.</p>
+                      <p class="qt">15. The road to hell is paved with good intentions.</p>
+                      <p class="qt" >16. Birds of a feather flock together.</p>
+                      <p class="qt" >17. Better safe than sorry.</p>
 
                      </div>
 
