--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                       <p  class="qt">9. Better late than never.</p>
                       <p  class="qt">10. Don't put all your eggs in one basket.</p>
                       <p  class="qt">11. Fools rush in where angels fear to tread.</p>
-                      <p  class="qt">12. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln.</p>
+                      <p  class="qt">12. "I learn from everybody, even if sometimes it’s what not to do." - Abraham Lincoln</p>
                       <p class="qt">13. Loose lips sink ships.</p>
                       <p class="qt">14. Rome wasn't built in a day.</p>
                       <p class="qt">15. The road to hell is paved with good intentions.</p>
