--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                       <p class="qt">15. The road to hell is paved with good intentions.</p>
                       <p class="qt" >16. Birds of a feather flock together.</p>
                       <p class="qt" >17. Better safe than sorry.</p>
+                      <p class="qt" >18. The ends do not justify the means.</p>
+                      
+
 
                      </div>
 
