--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                        <p class="sp2" id="ma5">5.There are two economic policies that are used to achieve our economic goals. They are Fiscal policy and Monetary policy. Fiscal policy primarily deals with taxation. Monetary policy deals with regulating money supply in the economy. Central government deals with Fiscal Policy. Central bank deals with Monetary policy. In india it is called Reserve Bank Of India (RBI), in america it is called the Federal Reserve. Central government levies taxes, while the central bank is the head of all banks in a country and regulates money supply using various interest rates.</p>
                        <p class="sp2" id="ma6">6. If you type " Milton Friedman - I, pencil " on youtube, you will get a video in which he explained briliantly how foreign trade works. It is a must watch video. <p>
 
+                        <p></p>
+
                      </div>
 
                     </div>
@@ -131,6 +133,9 @@
                       <p class="qt" >16. Birds of a feather flock together.</p>
                       <p class="qt" >17. Better safe than sorry.</p>
                       <p class="qt" >18. The ends do not justify the means.</p>
+                      <p class="qt">19. "Hell is empty and all the devils are here" - William Shakespeare </p>
+                      <p class="qt">20. There are none so blind as those who will not see.</p>
+                      <p class="qt">21. "No one is more hated than he who speaks the truth" - Plato</p>
                       
 
 
