--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 </table>
           </div> <br>
           <p class="sp1" id="p1">1. In terms of explanation, there are three important concepts to understand : Premise, Precondition, and Paraphrase.</p>
+          <p class="sp1" id="p11">	 i. The chapter "functions" is one such chapter of mathematics that can trouble even experienced faculty when faced with a difficult question. ఇది మా ఇంటర్ maths సార్ cheppina విషయం. చాలా సంవత్సరాల క్రితం చెప్పిన మాట కాబట్టి ఆయన ఉపయోగించిన పదాలు గుర్తుండవు. కాబట్టి ఆయన చెప్పిన విషయం నేను నా సొంత మాటలలో చెప్పాను. ఇలా వేరేవళ్ళు చెప్పిన విషయం అర్ధం మారకుండా మన సొంత పదాలతో చెప్పటాన్ని  "paraphrase" అంటారు.</p>
+
+          <p class="sp1" id="p12">ii. ఇక్కడ మా సార్ చెప్పాలి అని అనుకుంటున్న విషయం " functions అనే చాప్టర్ చాలా కష్టం." దానినే మనం premise అనుకోవచ్చు.</p>
+
+          <p class="sp1" id="p13">iii. అసలు ఇది inter లో జరగాలి అంటే ముందు 10th పాస్ అయ్యుండాలి కదా, 10th పాస్ అవ్వటాన్ని Precondition అనుకోవచ్చు.</p> <br>
+
           <p class="sp1" id="p2">2. In terms of criminal investigation, there are three important concepts to understand : Motive, Means and Opportunity.</p>
           <p class="sp1" id="p3">3. In terms of philosophy, there are three important names to remember : Socrates, Plato and Aristotle.</p> 
           <p class="sp1" id="p4">4. In terms of persuasion, there are three important concepts to understand: Logos, Ethos , and Pathos.</p> <br>
