--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <p class="sp1" id="p12">ii. ఇక్కడ మా సార్ చెప్పాలి అని అనుకుంటున్న విషయం " functions అనే చాప్టర్ చాలా కష్టం." దానినే మనం premise అనుకోవచ్చు.</p>
 
-          <p class="sp1" id="p13">iii. అసలు ఇది inter లో జరగాలి అంటే ముందు 10th పాస్ అయ్యుండాలి కదా, 10th పాస్ అవ్వటాన్ని Precondition అనుకోవచ్చు.</p> <br>
+          <p class="sp1" id="p13">iii. అసలు ఇది inter లో జరగాలి అంటే ముందు 10th పాస్ అయ్యుండాలి కదా, 10th పాస్ అవ్వటాన్ని Precondition అనుకోవచ్చు.</p>
 
           <p class="sp1" id="p2">2. In terms of criminal investigation, there are three important concepts to understand : Motive, Means and Opportunity.</p>
           <p class="sp1" id="p3">3. In terms of philosophy, there are three important names to remember : Socrates, Plato and Aristotle.</p> 
