--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                       <p class="qt">19. "Hell is empty and all the devils are here" - William Shakespeare </p>
                       <p class="qt">20. There are none so blind as those who will not see.</p>
                       <p class="qt">21. "No one is more hated than he who speaks the truth" - Plato</p>
+                      <p class="qt">22. Good people have an obligation to study evil.</p>
+                      <p class="qt">23. Incentives explain behaviour.</p>
+                      
 
                      </div>
 
