--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                       <p class="qt">21. "No one is more hated than he who speaks the truth" - Plato</p>
                       <p class="qt">22. Good people have an obligation to study evil.</p>
                       <p class="qt">23. Incentives explain behaviour.</p>
+                      <p class="qt">24. The grass isn't always greener on the other side.</p>
                       
 
                      </div>
