--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                       <p class="qt">22. Good people have an obligation to study evil.</p>
                       <p class="qt">23. Incentives explain behaviour.</p>
                       <p class="qt">24. A rising tide lifts all boats.</p>
-                      <p class="qt">25. The grass isn't always greener on the other side.</p>
+                      <p class="qt">25. Familiarity breeds contempt.</p>
+                      <p class="qt">26. The grass isn't always greener on the other side.</p>
                       
                       
 
