--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
                       <p class="qt">22. Good people have an obligation to study evil.</p>
                       <p class="qt">23. Incentives explain behaviour.</p>
                       <p class="qt">24. A rising tide lifts all boats.</p>
-                      <p class="qt">25. Familiarity breeds contempt.</p>
-                      <p class="qt">26. The grass isn't always greener on the other side.</p>
+	    <p class="qt">25. A chain is no stronger than its weakest link, and life is after all a chain  -William James</p>
+                      <p class="qt">26. Familiarity breeds contempt.</p>
+                      <p class="qt">27. The grass isn't always greener on the other side.</p>
                       
                       
 
