--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 	    <p class="qt">25. A chain is no stronger than its weakest link, and life is after all a chain  -William James</p>
                       <p class="qt">26. Familiarity breeds contempt.</p>
                       <p class="qt">27. The grass isn't always greener on the other side.</p>
+	     <p class="qt">28. Necessity is the mother of invention.</p>
                       
                       
 
