--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <div id="header"> 
            <h1>Introduction</h1>
-            <p >The ability to teach yourself is probably the greatest superpower you can have in this information age. Improving your language skills plays a crucial role in developing that ability. This is an eductional website where the primary focus is on teaching english using important general knowledge topics. </p> <br>
+            <p >The ability to teach yourself is probably the greatest superpower you can have in this information age. Improving your language skills plays a crucial role in developing that ability. This is an eductional website where the primary focus is on teaching important general knowledge topics. </p> <br>
             <div class="sld"><p class="sl">If a sentence could explain the basic idea behind this website, it would be " Ignorance is bliss, and also dangerous ".</p> </div> <br>
             <br>
             <div class="sld"><p class="sl"> The ability to write is a great advantage, if not the greatest.</p> </div> 
