--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     </tr>                  
                 </table>
           </div> <br>
-          <p class="sp1" id="p1">1. In terms of explanation, there are three important concepts to understand : Premise, Precondition, and Paraphrase.</p> <br>
+          <p class="sp1" id="p1">1. In terms of explanation, there are three important concepts to understand : Premise, Precondition, and Paraphrase.</p>
 
-          <p class="sp1" id="p2">2. In terms of criminal investigation, there are three important concepts to understand : Motive, Means and Opportunity.</p><br>
+          <p class="sp1" id="p2">2. In terms of criminal investigation, there are three important concepts to understand : Motive, Means and Opportunity.</p>
 
           <p class="sp1" id="p3">3. In terms of philosophy, there are three important names to remember : Socrates, Plato and Aristotle.</p> 
           <p class="sp1" id="p4">4. In terms of persuasion, there are three important concepts to understand: Logos, Ethos , and Pathos.</p> <br>
@@ -61,9 +61,6 @@
             <p class="sl">Commercializing scientific advancements is the axiom of human civilization.</p>
           </div> <br>
 
-          <p class="sp1" > Artificial intelligence (AI) </p> 
-          <br>
-        
           <div id="t1" >
                     <h3>Macroeconomics:</h3> 
                     <div>
